<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditActivity"
    android:layout_margin="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:hintTextAppearance="@style/HintCommentText"
        app:counterMaxLength="140"
        app:counterEnabled="true"
        app:helperTextEnabled = "true"
        app:helperText = "@string/helper_comment"
        app:endIconMode = "clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:theme="@style/CommentText"
            android:lines="3"
            android:maxLength="140" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/category"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/add_text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/textCat"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButtonFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/food" />

        <RadioButton
            android:id="@+id/radioButtonShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shop" />

        <RadioButton
            android:id="@+id/radioButtonSight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Sight" />

        <RadioButton
            android:id="@+id/radioButtonNature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nature" />

        <RadioButton
            android:id="@+id/radioButtonEnterteinmant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Enterteinmant" />

        <RadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Other" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/addd"
        android:textColor="#ffffff"
        android:onClick="onClickUpdate"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupCategory"
        tools:layout_editor_absoluteX="24dp"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>